--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
- <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,8 +8,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="105dp"
         android:layout_marginTop="58dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +23,7 @@
             android:layout_gravity="center"
             android:fontFamily="sans-serif-condensed-medium"
             android:text="time:"
-            android:textColor="@color/black"
+            android:textColor="#d62828"
             android:textSize="24dp"
             tools:layout_editor_absoluteX="180dp"
             tools:layout_editor_absoluteY="55dp" />
@@ -36,7 +36,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-condensed-medium"
             android:text="score:"
-            android:textColor="@color/black"
+            android:textColor="#d62828"
             android:textSize="24dp"
             tools:layout_editor_absoluteX="174dp"
             tools:layout_editor_absoluteY="118dp" />
@@ -44,8 +44,8 @@
 
     <GridLayout
         android:id="@+id/gridLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="411dp"
+        android:layout_height="392dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,22 +62,12 @@
             app:srcCompat="@drawable/doge" />
 
         <ImageView
-            android:id="@+id/dogeImage1"
+            android:id="@+id/dogeImage2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="0"
 
             android:layout_column="1"
-            android:onClick="dogeClicked"
-            app:srcCompat="@drawable/doge" />
-
-        <ImageView
-            android:id="@+id/dogeImage2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="2"
-
             android:onClick="dogeClicked"
             app:srcCompat="@drawable/doge" />
 
@@ -85,17 +75,8 @@
             android:id="@+id/dogeImage3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:onClick="dogeClicked"
-            app:srcCompat="@drawable/doge" />
-
-        <ImageView
-            android:id="@+id/dogeImage4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="1"
-            android:layout_column="1"
+            android:layout_row="0"
+            android:layout_column="2"
             android:onClick="dogeClicked"
             app:srcCompat="@drawable/doge" />
 
@@ -104,7 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="1"
-            android:layout_column="2"
+            android:layout_column="0"
             android:onClick="dogeClicked"
             app:srcCompat="@drawable/doge" />
 
@@ -112,8 +93,8 @@
             android:id="@+id/dogeImage6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_row="2"
-            android:layout_column="0"
+            android:layout_row="1"
+            android:layout_column="1"
             android:onClick="dogeClicked"
             app:srcCompat="@drawable/doge" />
 
@@ -121,16 +102,7 @@
             android:id="@+id/dogeImage7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:onClick="dogeClicked"
-            app:srcCompat="@drawable/doge" />
-
-        <ImageView
-            android:id="@+id/dogeImage8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="2"
+            android:layout_row="1"
             android:layout_column="2"
             android:onClick="dogeClicked"
             app:srcCompat="@drawable/doge" />
@@ -139,7 +111,7 @@
             android:id="@+id/dogeImage9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_row="3"
+            android:layout_row="2"
             android:layout_column="0"
             android:onClick="dogeClicked"
             app:srcCompat="@drawable/doge" />
@@ -148,7 +120,7 @@
             android:id="@+id/dogeImage10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_row="3"
+            android:layout_row="2"
             android:layout_column="1"
             android:onClick="dogeClicked"
             app:srcCompat="@drawable/doge" />
@@ -157,8 +129,72 @@
             android:id="@+id/dogeImage11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_row="2"
+            android:layout_column="2"
+            android:onClick="dogeClicked"
+            app:srcCompat="@drawable/doge" />
+
+        <ImageView
+            android:id="@+id/dogeImage13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:onClick="dogeClicked"
+            app:srcCompat="@drawable/doge" />
+
+        <ImageView
+            android:id="@+id/dogeImage14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:onClick="dogeClicked"
+            app:srcCompat="@drawable/doge" />
+
+        <ImageView
+            android:id="@+id/dogeImage15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_row="3"
             android:layout_column="2"
+            android:onClick="dogeClicked"
+            app:srcCompat="@drawable/doge" />
+
+        <ImageView
+            android:id="@+id/dogeImage8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="1"
+            android:layout_column="3"
+            android:onClick="dogeClicked"
+            app:srcCompat="@drawable/doge" />
+
+        <ImageView
+            android:id="@+id/dogeImage12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="2"
+            android:layout_column="3"
+            android:onClick="dogeClicked"
+            app:srcCompat="@drawable/doge" />
+
+        <ImageView
+            android:id="@+id/dogeImage16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="3"
+            android:layout_column="3"
+            android:onClick="dogeClicked"
+            app:srcCompat="@drawable/doge" />
+
+        <ImageView
+            android:id="@+id/dogeImage4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_row="0"
+            android:layout_column="3"
             android:onClick="dogeClicked"
             app:srcCompat="@drawable/doge" />
     </GridLayout>
